# test-codebase

./: .gitignore  README.md  pyproject.toml
docker/: backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile
src/backend/: app.py
src/frontend/: package.json
src/frontend/src/: App.tsx  ImageUpload.scss
